# opsdroid-skill-networkinfo

./: README.md  __init__.py  pyproject.toml  requirements.txt
networkinfo/: __init__.py
